# HH_vacancies

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_file_workers_py.html  z_145eef247bfb46b6_parser_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: file_workers.py  hh.py  pars_hh.py  parser.py  save_to_file.py  utils.py  vacancy.py
tests/: conftest.py  test_file_workers.py  test_parser.py  test_utils.py  test_vacancy.py
